Ajustando language schema

--- a/languages/ja.json
+++ b/languages/ja.json
@@ -5,10 +5,10 @@
         "technologies": "Tecnologias",
         "social_media": "Redes Sociais",
         "language": {
-            "label": "Linguagem",
-            "english": "Inglês",
-            "portuguese": "Portugês",
-            "japanese": "Japonês"
+            "label": "言語",
+            "english": "英語",
+            "portuguese": "ポルトガル語",
+            "japanese": "日本語"
         }
     },
     "personal_information": {
