--- a/languages/pt-br.json
+++ b/languages/pt-br.json
@@ -3,6 +3,7 @@
         "personal_information": "Informações Pessoais",
         "projects": "Projetos",
         "technologies": "Tecnologias",
+        "work_experience": "Experiência de trabalho",
         "social_media": "Redes Sociais",
         "language": {
             "label": "Linguagem",
